Fix navbar collapse responsiveness

--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -455,18 +455,6 @@ $paragraph_color: #818992;
 			margin-top: 50px;
 		}
 	}
-
-	.navbar-collapse {
-		border: none !important;
-		margin-top: 0 !important;
-	}
-	.crake-nav nav {
-		.navbar-brand {
-			img {
-				max-width: 80px !important;
-			}
-		}
-	}
 }
 
 /* Min width (992px) to Max width (1199px) */
